# Aquaria

./: .cirrus.yml  .gitignore  .travis.yml  BUILD.win.md  CMakeLists.txt  CONTENT-LICENSE.txt  README.txt  aquaria.rc  usersettings.xml
Aquaria/: AStar.h  AnimationEditor.cpp  AnimationEditor.h  AquariaComboBox.cpp  AquariaCompileConfig.h  AquariaMenuItem.cpp  AquariaMenuItem.h  AquariaProgressBar.cpp  AquariaProgressBar.h  AquariaSaveSlot.cpp  AutoMap.cpp  AutoMap.h  Avatar.cpp  Avatar.h  Beam.cpp  Beam.h  BitBlotLogo.cpp  BoxElement.cpp  BubbleRender.cpp  CMakeLists.txt  CollideEntity.cpp  CollideEntity.h  Continuity.cpp  Continuity.h  Credits.cpp  CurrentRender.cpp  DSQ.cpp  DSQ.h  DSQ.h.orig  Damage.h  Demo.cpp  Element.cpp  Element.h  Elements.h  Emote.cpp  Entity.cpp  Entity.h  ExternalGUI.h  FFTNotes.cpp  FlockEntity.cpp  (+99 more)
BBGE/: ActionInput.cpp  ActionInput.h  ActionMapper.cpp  ActionMapper.h  ActionSet.cpp  ActionSet.h  ActionStatus.cpp  ActionStatus.h  AfterEffect.cpp  AfterEffect.h  AnimatedSprite.cpp  AnimatedSprite.h  BBGECompileConfig.h  Base.cpp  Base.h  BaseText.h  BitmapFont.cpp  BitmapFont.h  BloomEffect.cpp  BloomEffect.h  ByteBuffer.h  CMakeLists.txt  CShim.cpp  Cocoa.mm  Collision.cpp  Collision.h  CommonEvents.h  Core.cpp  Core.h  Cube.cpp  Cube.h  Cutscene.cpp  Cutscene.h  DFSprite.cpp  DFSprite.h  DarkLayer.cpp  DarkLayer.h  DataStructures.h  Datafile.cpp  Datafile.h  (+163 more)
BBGE/GL/: gl.h  gles.h  glext.h
BBGE/glext/: glext.h
ExternalLibs/: ByteBuffer.h  CMakeLists.txt  DeflateCompressor.cpp  DeflateCompressor.h  FTGL.cmake  FileAPI.cpp  FileAPI.h  JPS.h  algorithmx.h  ascon-sponge.h  b_stacktrace.h  dmon.h  freetype2.cmake  glpng.h  jps.hh  lua51.cmake  luaalloc.cpp  luaalloc.h  minihttp.cpp  minihttp.h  minipstdint.h  miniz.cpp  miniz.h  mojoal.c  oggvorbis.cmake  tbsp.hh  tinylibs.cpp  tinyxml.cpp  tinyxml.h  tinyxml2.cmake  tinyxml2.cpp  tinyxml2.h
ExternalLibs/AL/lib/linux-x86/: libopenal.so.1
ExternalLibs/FTGL/: CMakeLists.txt
ExternalLibs/FTGL/include/: FTGL.h  FTGlyphContainer.h
ExternalLibs/FTGL/src/: FTBitmapGlyph.cpp  FTCharmap.cpp  FTContour.cpp  FTExtrdGlyph.cpp  FTFace.cpp  FTFont.cpp  FTGLBitmapFont.cpp  FTGLExtrdFont.cpp  FTGLOutlineFont.cpp  FTGLPixmapFont.cpp  FTGLPolygonFont.cpp  FTGLTextureFont.cpp  FTGlyph.cpp  FTGlyphContainer.cpp  FTLibrary.cpp  FTOutlineGlyph.cpp  FTPixmapGlyph.cpp  FTPoint.cpp  FTPolyGlyph.cpp  FTSize.cpp  FTTextureGlyph.cpp  FTVectoriser.cpp
ExternalLibs/GL/: gl.h
ExternalLibs/SDL12/include/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_config.h  SDL_config.h.orig  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_getenv.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_net.h  SDL_opengl.h  SDL_platform.h  SDL_quit.h  SDL_rwops.h  SDL_stdinc.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_version.h  SDL_video.h  begin_code.h  close_code.h
ExternalLibs/SDL12/lib/macosx/: libSDL-1.2.0.dylib
ExternalLibs/SDL12/lib/win32/: SDLmain.lib
ExternalLibs/SDL2/lib/win32/: SDL2.lib  SDL2main.lib
ExternalLibs/freetype2/builds/mac/: ftmac.c
ExternalLibs/freetype2/builds/unix/: config.status  freetype-config  (+6 more)
ExternalLibs/glfont2/: glfont2.cpp  glfont2.h
ExternalLibs/glm/core/: func_integer.inl  intrinsic_common.inl  intrinsic_matrix.inl  setup.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_vec2.hpp
ExternalLibs/glm/gtc/: half_float.hpp  quaternion.hpp  quaternion.inl
ExternalLibs/glm/gtx/: epsilon.hpp  epsilon.inl  integer.inl  quaternion.inl  random.inl
ExternalLibs/glpng/: glpng.c
ExternalLibs/glpng/png/: png.c  png.h  pngconf.h  pngerror.c  pngget.c  pnglibconf.h  pngmem.c  pngpread.c  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c
ExternalLibs/glpng/zlib/: adler32.c  compress.c  crc32.c  deflate.c  example.c  gzio.c  inflate.c  inftrees.c  minigzip.c  trees.c  uncompr.c  zutil.c
ExternalLibs/iprof/: iprof.txt  prof.h  prof_draw.c  prof_gather.c  prof_gather.h  prof_internal.h  prof_process.c  prof_win32.c  prof_win32.h
ExternalLibs/libogg-1.2.0/: Makefile.in  aclocal.m4  config.h.in  configure  libogg.spec
ExternalLibs/libogg-1.2.0/doc/: Makefile.in
ExternalLibs/libogg-1.2.0/src/: Makefile.in
ExternalLibs/libvorbis-1.3.3/lib/: codebook.c
ExternalLibs/lua-5.1.4/: CMakeLists.txt
ExternalLibs/lua-5.1.4/etc/: all.c  min.c  noparser.c
ExternalLibs/lua-5.1.4/src/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  (+15 more)
ExternalLibs/lvpa/: ByteBuffer.h  ByteConverter.h  LVPACommon.h  LVPACompileConfig.h  LVPAInternal.h
ExternalLibs/tinyxml2/: tinyxml2.cpp
ExternalLibs/ttvfs/: CMakeLists.txt  VFS.h  VFSArchiveLoader.h  VFSAtomic.cpp  VFSAtomic.h  VFSBase.cpp  VFSBase.h  VFSDebug.cpp  VFSDebug.h  VFSDefines.h  VFSDir.cpp  VFSDir.h  VFSDirInternal.cpp  VFSDirInternal.h  VFSDirView.cpp  VFSDirView.h  VFSFile.cpp  VFSFile.h  VFSFileFuncs.cpp  VFSFileFuncs.h  VFSHashmap.h  VFSHelper.cpp  VFSHelper.h  VFSInternal.h  VFSLoader.cpp  VFSLoader.h  VFSRefcounted.h  VFSRoot.cpp  VFSRoot.h  VFSSelfRefCounter.h  VFSSystemPaths.cpp  VFSSystemPaths.h  VFSTools.cpp  VFSTools.h  ttvfs.h
ExternalLibs/ttvfs_cfileapi/: CMakeLists.txt  ttvfs_stdio.cpp  ttvfs_stdio.h
ExternalLibs/ttvfs_zip/: CMakeLists.txt  VFSDirZip.cpp  VFSDirZip.h  VFSFileZip.cpp  VFSFileZip.h  VFSZipArchiveLoader.cpp  VFSZipArchiveLoader.h  VFSZipArchiveRef.cpp  VFSZipArchiveRef.h  miniz.c  miniz.h  ttvfs_zip.h
(+1267 files in other folders)
